--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Vapor</title>
+    <link rel="icon" href="./favicon/favicon-32x32.png">
   </head>
   <body>
     <div id="root"></div>
