--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <script src="https://kit.fontawesome.com/2e6229d6f8.js" crossorigin="anonymous"></script>
     <title>Vapor</title>
-    <link rel="icon" href="./favicon/favicon-32x32.png">
+    <link rel="icon" href="./static/favicon/favicon-32x32.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous" />
   </head>
   <body>
