--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="title" property="og:title" content="Vapor" />
+    <meta property="og:type" content="Website" />
+    <meta name="image" property="og:image" content="https://user-images.githubusercontent.com/89172742/170356057-0193ed63-4eb8-4243-b0a6-ddef81366c9b.jpg">
+    <meta name="description" property="og:description" content="Vapor is a steam clone that was developed in a team of four. Users can create, update and delete games in vapor works and can add and delete games to cart. The cart can later be purchased and will appear in their library." />
+    <meta name="author" content="Chris Mizell, Jason Vien, Damian Rojas, Jared Kunhart" />
     <script src="https://kit.fontawesome.com/2e6229d6f8.js" crossorigin="anonymous"></script>
     <title>Vapor</title>
     <link rel="icon" href="./static/favicon/favicon-32x32.png">
